emanueljoab.github.io atualizado

--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p><a href="https://emanueljoab.github.io/odyssey/">Magnavox Odyssey</a></p>
-    <p><a href="https://emanueljoab.github.io/macacos/">Gerador de Macaco Aleatório</a></p>
-    <p><a href="https://emanueljoab.github.io/racas-de-gatos/">Raças de gatos</a></p>
-    <p><a href="https://github.com/emanueljoab/">Meu Repositório</a></p>
+    <header>
+        <h1><a href="https://emanueljoab.github.io/">emanueljoab.github.io</a></h1>
+    </header>
+    <main>
+        <p><a href="https://emanueljoab.github.io/odyssey/">Magnavox Odyssey</a></p>
+        <p><a href="https://emanueljoab.github.io/macacos/">Gerador de Macaco Aleatório</a></p>
+        <p><a href="https://emanueljoab.github.io/racas-de-gatos/">Raças de gatos</a></p>
+        <p><a href="https://github.com/emanueljoab/" target="_blank">Meu Repositório</a></p>
+    </main>
 </body>
 </html>
