--- a/index.html
+++ b/index.html
@@ -5,7 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Repositório público de Emanuel Joab</title>
-    <link rel="stylesheet" href="./style.css">
+<style>
+    body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgba(255, 235, 205, 0.37);
+}
+header {
+    margin-top: 100px;
+}
+h1 {
+    text-align: center;
+    font-size: 1.5em;
+}
+a {
+    text-decoration: none;
+    color: black;
+}
+a:hover {
+    text-decoration: underline;
+}
+main {
+    margin: auto;
+    text-align: center;
+}
+</style>
 </head>
 <body>
     <header>
