--- a/index.html
+++ b/index.html
@@ -7,34 +7,36 @@
     <title>Repositório público de Emanuel Joab</title>
 <style>
     body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: rgba(255, 235, 205, 0.37);
-}
-header {
-    margin-top: 100px;
-}
-h1 {
-    text-align: center;
-    font-size: 1.5em;
-}
-a {
-    text-decoration: none;
-    color: black;
-}
-a:hover {
-    text-decoration: underline;
-}
-main {
-    margin: auto;
-    text-align: center;
-}
+        margin: 0;
+        position: relative;
+        height: 100vh;
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: rgba(255, 235, 205, 0.37);
+        text-align: center;
+    }
+    main {
+        position: absolute;
+        height: 300px;
+        width: 300px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    h1 {
+        font-size: 1.5em;
+    }
+    a {
+        text-decoration: none;
+        color: black;
+    }
+    a:hover {
+        text-decoration: underline;
+    }
 </style>
 </head>
 <body>
-    <header>
-        <h1><a href="https://emanueljoab.github.io/">emanueljoab.github.io</a></h1>
-    </header>
     <main>
+        <h1><a href="https://emanueljoab.github.io/">emanueljoab.github.io</a></h1>
         <p><a href="https://emanueljoab.github.io/odyssey/">Magnavox Odyssey</a></p>
         <p><a href="https://emanueljoab.github.io/macacos/">Gerador de Macaco Aleatório</a></p>
         <p><a href="https://emanueljoab.github.io/racas-de-gatos/">Raças de gatos</a></p>
