--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 <body>
     <main>
         <h1><a href="https://emanueljoab.github.io/">emanueljoab.github.io</a></h1>
-        <p><a href="https://emanueljoab.github.io/odyssey/">Magnavox Odyssey</a></p>
+        <p><a href="https://emanueljoab.github.io/forca/">Jogo da forca</a></p>
         <p><a href="https://emanueljoab.github.io/deriva/">Deriva</a></p>
+        <p><a href="https://emanueljoab.github.io/odyssey/">Magnavox Odyssey</a></p>
         <p><a href="https://emanueljoab.github.io/macacos/">Gerador de Macaco Aleatório</a></p>
         <p><a href="https://emanueljoab.github.io/racas-de-gatos/">Raças de gatos</a></p>
         <p><a href="https://github.com/emanueljoab/" target="_blank">Meu Repositório</a></p>
