Jogo da Cobrinha adicionado

--- a/index.html
+++ b/index.html
@@ -36,13 +36,11 @@
 </head>
 <body>
     <main>
-        <h1><a href="https://emanueljoab.github.io/">emanueljoab.github.io</a></h1>
-        <p><a href="https://emanueljoab.github.io/forca/">Jogo da forca</a></p>
-        <p><a href="https://emanueljoab.github.io/deriva/">Deriva</a></p>
+        <h1><a href="https://github.com/emanueljoab/" target="_blank">emanueljoab.github.io</a></h1>
+        <p><a href="https://emanueljoab.github.io/cobrinha/">Jogo da Cobrinha</a></p>
+        <p><a href="https://emanueljoab.github.io/forca/">Jogo da Forca</a></p>
+        <p><a href="https://emanueljoab.github.io/macacos/">Gerador de Macaco Aleatório</a></p>        
         <p><a href="https://emanueljoab.github.io/odyssey/">Magnavox Odyssey</a></p>
-        <p><a href="https://emanueljoab.github.io/macacos/">Gerador de Macaco Aleatório</a></p>
-        <p><a href="https://emanueljoab.github.io/racas-de-gatos/">Raças de gatos</a></p>
-        <p><a href="https://github.com/emanueljoab/" target="_blank">Meu Repositório</a></p>
     </main>
 </body>
 </html>
