--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 <body>
     <main>
         <h1><a href="https://github.com/emanueljoab/" target="_blank">emanueljoab.github.io</a></h1>
+        <p><a href="https://emanueljoab.github.io/bichinho/">Bichinho Virtual</a></p>
         <p><a href="https://emanueljoab.github.io/cobrinha/">Jogo da Cobrinha</a></p>
         <p><a href="https://emanueljoab.github.io/forca/">Jogo da Forca</a></p>
-        <p><a href="https://emanueljoab.github.io/macacos/">Gerador de Macaco Aleatório</a></p>        
-        <p><a href="https://emanueljoab.github.io/odyssey/">Magnavox Odyssey</a></p>
+        <p><a href="https://emanueljoab.github.io/macacos/">Gerador de Macaco Aleatório</a></p>
     </main>
 </body>
 </html>
